# backend/api/src/Questions.py
@@ -5,10 +5,18 @@ from api.helpers.service import Sql
 
 def insert_quest(user_data):
     try:
-        auth_data = Sql.exec(file="api/sql/select_user_auth.sql", args=user_data)
+        auth_data = Sql.exec(file="api/sql/insert_quest.sql", args=user_data)
     except:
         return {names.ANSWER: errors.SQL_EXEC,
                 names.DATA: {"error_info": "Ошибка запроса к базе данных"}}
-    auth = Sql.exec(file="api/sql/select_auth.sql", args=user_data)
-    return {names.ANSWER: errors.OK, names.DATA: auth[0]}
+    return {names.ANSWER: errors.OK, names.DATA: auth_data[0]}
+
+
+def select_quest():
+    try:
+        auth_data = Sql.exec(query="select * from questions")
+    except:
+        return {names.ANSWER: errors.SQL_EXEC,
+                names.DATA: {"error_info": "Ошибка запроса к базе данных"}}
+    return {names.ANSWER: errors.OK, names.DATA: auth_data}
 
